--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     <form class="login-form">
       <input type="text" placeholder="username"/>
       <input type="password" placeholder="password"/>
+      <input type="text" placeholder="email address"/>
       <button>login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
