--- a/client/public/register.html
+++ b/client/public/register.html
@@ -3,22 +3,13 @@
     <script src="login.js"></script> 
   </head>
   <div class="login-page">
-    <div class="form">
-      <form class="register-form">
-        <input type="text" placeholder="name"/>
-        <input type="password" placeholder="password"/>
-        <input type="passwordconfirm" placeholder="confirm password"/>
-        <input type="text" placeholder="email address"/>
-        <button>create</button>
-        <p class="message">Already registered? <a href="#">Sign In</a></p>
-      </form>
       <form class="login-form">
         <input type="text" placeholder="username"/>
         <input type="password" placeholder="password"/>
         <input type="text" placeholder="email address"/>
         <input type="passwordconfirm" placeholder="confirm password"/>
         <button>login</button>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
+        <p class="message">Already registered? <a href="index.html">Login</a></p>
       </form>
     </div>
   </div>
