--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" href="login.css">
-  <script src="login.js"></script> 
+  <script src="form.js"></script> 
 </head>
 <div class="login-page">
   <div class="form">
