--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" href="login.css">
-  <script src="form.js"></script> 
+  <script src="../src/components/form.js"></script> 
 </head>
 <div class="login-page">
   <div class="form">
@@ -8,7 +8,7 @@
       <input type="text" placeholder="username"/>
       <input type="password" placeholder="password"/>
       <button>login</button>
-      <p class="message">Not registered? <a href="register.html">Create an account</a></p>
+      <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
 </div>
